--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
 	"name": "Note ID",
 	"version": "1.0.0",
 	"minAppVersion": "0.15.0",
-	"description": "Organizes notes by an ID property, providing a structured way to create and maintain a note sequence, inspired by Zettelkasten principles (\"Folgezettel\").",
+	"description": "Displays notes by an ID property, providing a structured way to create and maintain a note sequence, inspired by Zettelkasten principles (\"Folgezettel\").",
 	"author": "Dominik Mayer",
 	"authorUrl": "https://www.dominikmayer.com",
 	"isDesktopOnly": false
