--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"@typescript-eslint/eslint-plugin": "5.29.0",
 		"@typescript-eslint/parser": "5.29.0",
 		"builtin-modules": "3.3.0",
+		"elm": "^0.19.1-6",
 		"esbuild": "0.17.3",
 		"esbuild-plugin-elm": "^0.0.12",
 		"obsidian": "latest",
