--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 	"scripts": {
 		"dev": "node esbuild.config.mjs",
 		"build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
+		"test": "elm-test",
 		"version": "node version-bump.mjs && git add manifest.json versions.json"
 	},
 	"keywords": [],
@@ -17,6 +18,7 @@
 		"@typescript-eslint/parser": "5.29.0",
 		"builtin-modules": "3.3.0",
 		"elm": "^0.19.1-6",
+		"elm-test": "^0.19.1-revision12",
 		"esbuild": "0.17.3",
 		"esbuild-plugin-elm": "^0.0.12",
 		"obsidian": "latest",
