--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"@typescript-eslint/parser": "5.29.0",
 		"builtin-modules": "3.3.0",
 		"elm": "^0.19.1-6",
+		"elm-review": "^2.12.0",
 		"elm-test": "^0.19.1-revision12",
 		"esbuild": "0.17.3",
 		"esbuild-plugin-elm": "^0.0.12",
