--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
 	"id": "note-id",
 	"name": "Note ID",
-	"version": "1.0.6",
+	"version": "1.0.7",
 	"minAppVersion": "0.15.0",
-	"description": "Displays notes by their ID, enabling structured sequences in a Zettelkasten (\"Folgezettel\").",
+	"description": "Displays notes by their ID, enabling structured sequences for manuscripts or Zettelkasten (\"Folgezettel\").",
 	"author": "Dominik Mayer",
 	"authorUrl": "https://www.dominikmayer.com",
 	"isDesktopOnly": false
